[package]
name = "log-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termcolor = "1.3.0"
serde = { version = "1.0", features = ["derive"] }

# serde_json is just for the example, not required in general
serde_json = "1.0"
serde_with = "3.3.0"
chrono = "0.4.31"
colored_json = "3.2.0"
sqlformat = "0.2.2"
